fullSandbox11072023/force-app/main/default/objects/Lead/fields/Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Address_Full__c</fullName>
    <formula>If(City != &apos;&apos;, Street + BR() +
City+ &quot;, &quot;+ State + &quot; &quot; + PostalCode, &apos;&apos;)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>