fullSandbox11072023/force-app/main/default/objects/Lead/fields/AEM_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>AEM_Lead_Score__c</fullName>
    <label>Anesthesia Lead Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>