fullSandbox11072023/force-app/main/default/objects/Lead/fields/ANZ_Lead__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Leads migrated from AU Instance.</description>
    <inlineHelpText>Used to identify Leads migrated from AU Instance.</inlineHelpText>
    <label>ANZ Lead</label>
    <type>Checkbox</type>
</CustomField>