fullSandbox11072023/force-app/main/default/objects/Lead/fields/ANZStamp__c.field-meta.xml
<CustomField>
    <fullName>ANZStamp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To help with Lead Logic for In Discussion or Not In Discussion  Lead Flow &apos;22</description>
    <inlineHelpText>To help with Lead Logic for In Discussion or Not In Discussion  Lead Flow &apos;22</inlineHelpText>
    <label>ANZ Stamp</label>
    <type>Checkbox</type>
</CustomField>