fullSandbox11072023/force-app/main/default/objects/Lead/fields/Assign_Using_Territories__c.field-meta.xml
<CustomField>
    <fullName>Assign_Using_Territories__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Uses the Territories with Business Unit and State/Zip to assign the lead.</inlineHelpText>
    <label>Assign Using Territories</label>
    <type>Checkbox</type>
</CustomField>