fullSandbox11072023/force-app/main/default/objects/Lead/fields/Best_way_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_way_to_contact__c</fullName>
    <description>Specify preference of contact as email or phone.</description>
    <label>Best way to contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>