fullSandbox11072023/force-app/main/default/objects/Lead/fields/Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Formula__c</fullName>
    <description>Field to pull the Business Unit from the user record in order to drive better data quality.</description>
    <formula>IF(!ISBLANK(Owner:Queue.OwnerId), &quot;Lead Queue&quot;, 
TEXT( Owner:User.Business_Unit__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User Business Unit or &quot;Lead Queue&quot; if owned by a Lead Queue.</inlineHelpText>
    <label>Business Unit (DNU)</label>
    <type>Text</type>
</CustomField>