fullSandbox11072023/force-app/main/default/objects/Lead/fields/Campaign_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_External_Id__c</fullName>
    <label>Campaign External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>