fullSandbox11072023/force-app/main/default/objects/Lead/fields/Campaign_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Membership_ID__c</fullName>
    <label>Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>