fullSandbox11072023/force-app/main/default/objects/Lead/fields/Cancel_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used as workaround to converting leads associated with a Time-Based Workflow rule.</description>
    <label>Cancel Workflow</label>
    <type>Checkbox</type>
</CustomField>