fullSandbox11072023/force-app/main/default/objects/Lead/fields/Contact_Local_Teleflex_Rep__c.field-meta.xml
<CustomField>
    <fullName>Contact_Local_Teleflex_Rep__c</fullName>
    <description>If “No, I don’t want a rep to contact me” is selected, they will be logged as a contact and the activity record updated
If “Yes, I want a rep to contact me”, they will still drop into the Campaign list with the activity record updated, but they will also be updated to a “lead” and go into the local rep lead queue for follow-up</description>
    <inlineHelpText>I would like to talk to my local Teleflex Representative</inlineHelpText>
    <label>Contact Local Teleflex Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>