fullSandbox11072023/force-app/main/default/objects/Lead/fields/Converted_to_Account_Contact_Only__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Account_Contact_Only__c</fullName>
    <formula>AND(
IsConverted=TRUE,
NOT(ISBLANK(ConvertedAccountId)),
NOT(ISBLANK(ConvertedContactId)),
ISBLANK(ConvertedOpportunityId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted to Account/Contact Only</label>
    <type>Checkbox</type>
</CustomField>