fullSandbox11072023/force-app/main/default/objects/Lead/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Lead Credentials maps to Contact Credentials</description>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Case Manager – Urology</fullName>
            </value>
            <value>
                <fullName>Category Manager</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Certified Registered Nurse Anesthetists</fullName>
            </value>
            <value>
                <fullName>Clinical Technician</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>CT Tech</fullName>
            </value>
            <value>
                <fullName>D.O</fullName>
            </value>
            <value>
                <fullName>Doctor of Veterinary Medicine</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Infection Control Nurse</fullName>
            </value>
            <value>
                <fullName>Infection Control Personnel</fullName>
            </value>
            <value>
                <fullName>MD, FACS</fullName>
            </value>
            <value>
                <fullName>Medical Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Other/None</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Paramedic</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Physician&apos;s Assistant</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>RAD Tech</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Registered Respiratory Therapist</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Warehouse Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>