fullSandbox11072023/force-app/main/default/objects/Lead/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Customer Number</description>
    <label>Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>