fullSandbox11072023/force-app/main/default/objects/Lead/fields/Customer_Potential__c.field-meta.xml
<CustomField>
    <fullName>Customer_Potential__c</fullName>
    <label>Customer Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - High</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - Low</fullName>
            </value>
            <value>
                <fullName>4 - Very low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>