fullSandbox11072023/force-app/main/default/objects/Lead/fields/DaysInDiscussionDateStamp__c.field-meta.xml
<CustomField>
    <fullName>DaysInDiscussionDateStamp__c</fullName>
    <label>Days In Discussion Date Stamp</label>
    <type>DateTime</type>
</CustomField>