fullSandbox11072023/force-app/main/default/objects/Lead/fields/DaystoConvert__c.field-meta.xml
<CustomField>
    <fullName>DaystoConvert__c</fullName>
    <label>Days to Convert</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>