fullSandbox11072023/force-app/main/default/objects/Lead/fields/DaystoUnqualify__c.field-meta.xml
<CustomField>
    <fullName>DaystoUnqualify__c</fullName>
    <label>Days to Unqualify</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>