fullSandbox11072023/force-app/main/default/objects/Lead/fields/DaysWhileInDiscussion__c.field-meta.xml
<CustomField>
    <fullName>DaysWhileInDiscussion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days While In Discussion</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>