fullSandbox11072023/force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Anaesthetic Department</fullName>
            </value>
            <value>
                <fullName>Apherisis UNit</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineering</fullName>
            </value>
            <value>
                <fullName>Cancer Care Centre</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardio Thoracic Intensive Care Nurse Unit</fullName>
            </value>
            <value>
                <fullName>Cardio Thoracic Surgery</fullName>
            </value>
            <value>
                <fullName>Childrens Ward</fullName>
            </value>
            <value>
                <fullName>Community Health</fullName>
            </value>
            <value>
                <fullName>Coronary Angiography Unit</fullName>
            </value>
            <value>
                <fullName>Coronary Care Unit</fullName>
            </value>
            <value>
                <fullName>Critical Care Unit</fullName>
            </value>
            <value>
                <fullName>Day Surgery</fullName>
            </value>
            <value>
                <fullName>Department of Defence</fullName>
            </value>
            <value>
                <fullName>Dialysis Unit</fullName>
            </value>
            <value>
                <fullName>Education Department</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Endovascular Suite</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Haematology Department</fullName>
            </value>
            <value>
                <fullName>High Dependency Unit</fullName>
            </value>
            <value>
                <fullName>Hospital In The Home</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>Intensive Care Unit</fullName>
            </value>
            <value>
                <fullName>Labour Ward</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Medical Imaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>