fullSandbox11072023/force-app/main/default/objects/Lead/fields/Department_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Department_ANZ__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>