fullSandbox11072023/force-app/main/default/objects/Lead/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <formula>Owner:User.Director_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director</label>
    <type>Text</type>
</CustomField>