fullSandbox11072023/force-app/main/default/objects/Lead/fields/DirectorEmail__c.field-meta.xml
<CustomField>
    <fullName>DirectorEmail__c</fullName>
    <defaultValue>$User.DirectorEmail__c</defaultValue>
    <label>Director Email</label>
    <type>Email</type>
</CustomField>