fullSandbox11072023/force-app/main/default/objects/Lead/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is used for LATAM</inlineHelpText>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Distributor)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>