fullSandbox11072023/force-app/main/default/objects/Lead/fields/Do_Not_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for education only leads, and others that do not require an opportunity to be created. This checkbox is ignored when you populate an existing opportunity.</description>
    <inlineHelpText>Used for education only leads, and others that do not require an opportunity to be created. This checkbox is ignored when you populate an existing opportunity.</inlineHelpText>
    <label>Do Not Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>