fullSandbox11072023/force-app/main/default/objects/Lead/fields/DocMatter__c.field-meta.xml
<CustomField>
    <fullName>DocMatter__c</fullName>
    <inlineHelpText>Is this a good candidate for DocMatter?</inlineHelpText>
    <label>DocMatter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>