fullSandbox11072023/force-app/main/default/objects/Lead/fields/DoesyourPROTallowforPHinsertion__c.field-meta.xml
<CustomField>
    <fullName>DoesyourPROTallowforPHinsertion__c</fullName>
    <description>Does your protocol allow for proximal humerus intraosseous insertion?</description>
    <inlineHelpText>Does your protocol allow for proximal humerus intraosseous insertion?</inlineHelpText>
    <label>Does your PROT allow for PH insertion?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>