fullSandbox11072023/force-app/main/default/objects/Lead/fields/Eloqua_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Lead_Rating__c</fullName>
    <label>Eloqua Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>