fullSandbox11072023/force-app/main/default/objects/Lead/fields/Eloqua_Sync__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Sync__c</fullName>
    <formula>AND 
(
OR(
UPPER(TEXT(Business_Unit__c)) = &quot;RESPIRATORY&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;UROLOGY&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;ANESTHESIA&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;EMS&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;ALTERNATE CARE&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;SURGICAL DISPOSABLES&quot;,
UPPER(TEXT(Business_Unit__c)) = &quot;SURGICAL INSTRUMENTS&quot;
), 
OR(Country=&quot;US&quot;, 
Country =&quot;USA&quot;, 
Country = &quot;United States of America&quot;,
Country = &quot;United States&quot;,
Country=&quot;us&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eloqua Sync</label>
    <type>Checkbox</type>
</CustomField>