fullSandbox11072023/force-app/main/default/objects/Lead/fields/eventtime__c.field-meta.xml
<CustomField>
    <fullName>eventtime__c</fullName>
    <description>Published date and time of the event</description>
    <inlineHelpText>Published date and time of the event</inlineHelpText>
    <label>eventtime</label>
    <type>DateTime</type>
</CustomField>