fullSandbox11072023/force-app/main/default/objects/Lead/fields/eventtitle__c.field-meta.xml
<CustomField>
    <fullName>eventtitle__c</fullName>
    <description>Title for the event</description>
    <inlineHelpText>Title for the event</inlineHelpText>
    <label>eventtitle</label>
    <type>TextArea</type>
</CustomField>