fullSandbox11072023/force-app/main/default/objects/Lead/fields/Existing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Existing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>