fullSandbox11072023/force-app/main/default/objects/Lead/fields/External_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>External_Product_of_Interest__c</fullName>
    <description>text field for Eloqua on leads called &quot;External Product of Interest&quot; that will support multiple products of interest from an external source.</description>
    <label>External Product of Interest</label>
    <type>TextArea</type>
</CustomField>