fullSandbox11072023/force-app/main/default/objects/Lead/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <description>Registrant provisioned text</description>
    <inlineHelpText>Registrant provisioned text</inlineHelpText>
    <label>Firstname</label>
    <type>TextArea</type>
</CustomField>