fullSandbox11072023/force-app/main/default/objects/Lead/fields/Force_Territory_Assigment_Check__c.field-meta.xml
<CustomField>
    <fullName>Force_Territory_Assigment_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Force the Lead to recheck the Territory Owner Assignment</inlineHelpText>
    <label>Force Territory Assigment Check</label>
    <type>Checkbox</type>
</CustomField>