fullSandbox11072023/force-app/main/default/objects/Lead/fields/Hidden_Lead_Source_Acct__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Lead_Source_Acct__c</fullName>
    <description>Place holder field to map field to account object</description>
    <label>Hidden Lead Source/Acct</label>
    <length>75</length>
    <type>Text</type>
</CustomField>