fullSandbox11072023/force-app/main/default/objects/Lead/fields/Hidden_Lead_Source_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Lead_Source_Contacts__c</fullName>
    <description>Place holder field to map lead source for contacts</description>
    <label>Hidden Lead Source Contacts</label>
    <length>75</length>
    <type>Text</type>
</CustomField>