fullSandbox11072023/force-app/main/default/objects/Lead/fields/Hidden_Specific_Lead_Source_Acct__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Specific_Lead_Source_Acct__c</fullName>
    <description>Place holder field to map for lead source</description>
    <label>Hidden Specific Lead Source_Acct</label>
    <length>75</length>
    <type>Text</type>
</CustomField>