fullSandbox11072023/force-app/main/default/objects/Lead/fields/Hidden_Specific_Lead_Source_for_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Specific_Lead_Source_for_Contacts__c</fullName>
    <description>Place holder field to map for lead source for contacts</description>
    <label>Hidden Specific Lead Source for Contacts</label>
    <length>75</length>
    <type>Text</type>
</CustomField>