fullSandbox11072023/force-app/main/default/objects/Lead/fields/Hospital_Position__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Position__c</fullName>
    <label>Hospital Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Doctor</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Certified Registered Nurse Anesthetists</fullName>
            </value>
            <value>
                <fullName>Physician&apos;s Assistant</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Scrub Tech</fullName>
            </value>
            <value>
                <fullName>Circulating Nurse</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>SPD Manager</fullName>
            </value>
            <value>
                <fullName>SPD Instrument Tech</fullName>
            </value>
            <value>
                <fullName>Nurse Technician</fullName>
            </value>
            <value>
                <fullName>Infection Control Nurse</fullName>
            </value>
            <value>
                <fullName>ICU Nurse</fullName>
            </value>
            <value>
                <fullName>Anesthesia Nurse</fullName>
            </value>
            <value>
                <fullName>Operating Room Nurse</fullName>
            </value>
            <value>
                <fullName>Operating Room Technician</fullName>
            </value>
            <value>
                <fullName>Sterile Processing Manager</fullName>
            </value>
            <value>
                <fullName>Sterile Processing Instrument Technician</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>