fullSandbox11072023/force-app/main/default/objects/Lead/fields/IAFinalLead__c.field-meta.xml
<CustomField>
    <fullName>IAFinalLead__c</fullName>
    <description>5 – Ready to be closed; immediate follow-up needed.
4 – In-service/demo requested; immediate follow-up needed.
3 – Requested to be contacted by rep directly.
2 – Pre-qualified by Marketing. Requested additional product information. See ‘notes’ section.
1 – Pre-qualified by Marketing. Lack of information initially. See ‘notes’ section.</description>
    <inlineHelpText>5 – Ready to be closed; immediate follow-up needed.
4 – In-service/demo requested; immediate follow-up needed.
3 – Requested to be contacted by rep directly.
2 – Pre-qualified by Marketing. Requested additional product information. See ‘notes’ section.
1 – Pre-qualified by Marketing. Lack of information initially. See ‘notes’ section.</inlineHelpText>
    <label>IA Final Lead Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>