fullSandbox11072023/force-app/main/default/objects/Lead/fields/IconsenttoTeleflexInc__c.field-meta.xml
<CustomField>
    <fullName>IconsenttoTeleflexInc__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I consent to Teleflex Inc and any of its affiliated companies and use my information to provide the requested information and resource, receive communications, educational and marketing materials and/or promotional offers and additional information in accordance with the Privacy Policy</inlineHelpText>
    <label>I consent to Teleflex Inc...</label>
    <type>Checkbox</type>
</CustomField>