fullSandbox11072023/force-app/main/default/objects/Lead/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <description>Inegrated Delivery Network agreements with specific organizations.</description>
    <inlineHelpText>Inegrated Delivery Network agreements with specific organizations.</inlineHelpText>
    <label>IDN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>