fullSandbox11072023/force-app/main/default/objects/Lead/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <description>Eloqua Related Field for Sugical BU</description>
    <label>Institution</label>
    <type>TextArea</type>
</CustomField>