fullSandbox11072023/force-app/main/default/objects/Lead/fields/Interest_Rating__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rating__c</fullName>
    <label>Interest Rating</label>
    <length>3</length>
    <type>Text</type>
</CustomField>