fullSandbox11072023/force-app/main/default/objects/Lead/fields/Invite_Code__c.field-meta.xml
<CustomField>
    <fullName>Invite_Code__c</fullName>
    <label>Invite Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>