fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lab_Eval_Key__c.field-meta.xml
<CustomField>
    <fullName>Lab_Eval_Key__c</fullName>
    <formula>Lab_Key__c &amp; Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Eval Key</label>
    <type>Text</type>
</CustomField>