fullSandbox11072023/force-app/main/default/objects/Lead/fields/Lead_Creation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Reason__c</fullName>
    <label>Lead Creation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>